--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -59,6 +59,25 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
+    
+	<!-- JWT parsing (same library used in user-service) -->
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-api</artifactId>
+		<version>0.11.1</version>
+	</dependency>
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-impl</artifactId>
+		<version>0.11.1</version>
+		<scope>runtime</scope>
+	</dependency>
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-jackson</artifactId>
+		<version>0.11.1</version>
+		<scope>runtime</scope>
+	</dependency>
 </dependencies>
 	<dependencyManagement>
 		<dependencies>
