--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.cloud.gateway.server.webflux.routes[0].uri=lb://USER-SERVICE
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/auth/**
 spring.cloud.gateway.server.webflux.routes[0].filters[0]=RewritePath=/auth/(?<segment>.*), /auth/${segment}
 
+# Route to movie-service
+spring.cloud.gateway.server.webflux.routes[1].id=movie-service
+spring.cloud.gateway.server.webflux.routes[1].uri=lb://MOVIE-SERVICE
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/movies/**
+
 # --- ✅ Correct CORS Configuration for WebFlux Gateway ---
 spring.cloud.gateway.server.webflux.globalcors.add-to-simple-url-handler-mapping=true
 spring.cloud.gateway.server.webflux.globalcors.corsConfigurations.[/**].allowedOriginPatterns=*
