--- a/movie-service/src/main/resources/application.properties
+++ b/movie-service/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+spring.application.name=MOVIE-SERVICE
+server.port=8086
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 spring.datasource.url=jdbc:postgresql://localhost:5434/movie_db
 spring.datasource.username=movie_user
 spring.datasource.password=movie_pass
