--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -21,6 +21,10 @@ spring.cloud.gateway.server.webflux.routes[2].id=booking-service
 spring.cloud.gateway.server.webflux.routes[2].uri=lb://BOOKING-SERVICE
 spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/bookings/**
 
+spring.cloud.gateway.server.webflux.routes[3].id=payment-service
+spring.cloud.gateway.server.webflux.routes[3].uri=lb://PAYMENT-SERVICE
+spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/payment/**
+
 # --- ✅ Correct CORS Configuration for WebFlux Gateway ---
 spring.cloud.gateway.server.webflux.globalcors.add-to-simple-url-handler-mapping=true
 spring.cloud.gateway.server.webflux.globalcors.corsConfigurations.[/**].allowedOriginPatterns=*
