--- a/movie-service/src/main/resources/application.yml
+++ b/movie-service/src/main/resources/application.yml
@@ -1,38 +1,38 @@
-server:
-  port: 8086
+# server:
+#   port: 8086
 
-spring:
-  application:
-    name: movie-service
+# spring:
+#   application:
+#     name: movie-service
 
-  datasource:
-    url: jdbc:postgresql://localhost:5432/moviesvc
-    username: moviesvc
-    password: moviesvc
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-  jackson:
-    serialization:
-      WRITE_DATES_AS_TIMESTAMPS: false
+#   datasource:
+#     url: jdbc:postgresql://localhost:5432/moviesvc
+#     username: moviesvc
+#     password: moviesvc
+#   jpa:
+#     hibernate:
+#       ddl-auto: create-drop
+#     properties:
+#       hibernate:
+#         dialect: org.hibernate.dialect.PostgreSQLDialect
+#   jackson:
+#     serialization:
+#       WRITE_DATES_AS_TIMESTAMPS: false
 
-springdoc:
-  swagger-ui:
-    path: /swagger-ui.html
-    operationsSorter: method
-    tagsSorter: alpha
+# springdoc:
+#   swagger-ui:
+#     path: /swagger-ui.html
+#     operationsSorter: method
+#     tagsSorter: alpha
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    prefer-ip-address: true
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: health,info
+# eureka:
+#   client:
+#     service-url:
+#       defaultZone: http://localhost:8761/eureka/
+#   instance:
+#     prefer-ip-address: true
