--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -1,37 +1,28 @@
 server.port=8085
 spring.application.name=API-GATEWAY
 
-# Eureka for Docker
 eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
-# User Service Route
-spring.cloud.gateway.server.webflux.routes[0].id=user-service
-spring.cloud.gateway.server.webflux.routes[0].uri=lb://USER-SERVICE
-spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/auth/**
-spring.cloud.gateway.server.webflux.routes[0].filters[0]=RewritePath=/auth/(?<segment>.*), /auth/${segment}
+# Correct Spring Cloud Gateway routes
+spring.cloud.gateway.routes[0].id=user-service
+spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
 
-# Movie Service Route
-spring.cloud.gateway.server.webflux.routes[1].id=movie-service
-spring.cloud.gateway.server.webflux.routes[1].uri=lb://MOVIE-SERVICE
-spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/movies/**
+spring.cloud.gateway.routes[1].id=movie-service
+spring.cloud.gateway.routes[1].uri=lb://MOVIE-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/movies/**
 
-# Booking Service Route
-spring.cloud.gateway.server.webflux.routes[2].id=booking-service
-spring.cloud.gateway.server.webflux.routes[2].uri=lb://BOOKING-SERVICE
-spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/bookings/**
+spring.cloud.gateway.routes[2].id=booking-service
+spring.cloud.gateway.routes[2].uri=lb://BOOKING-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/bookings/**
 
-# Payment Service Route
-spring.cloud.gateway.server.webflux.routes[3].id=payment-service
-spring.cloud.gateway.server.webflux.routes[3].uri=lb://PAYMENT-SERVICE
-spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/payment/**
+spring.cloud.gateway.routes[3].id=payment-service
+spring.cloud.gateway.routes[3].uri=lb://PAYMENT-SERVICE
+spring.cloud.gateway.routes[3].predicates[0]=Path=/payment/**
 
-# CORS for WebFlux
-spring.cloud.gateway.server.webflux.globalcors.add-to-simple-url-handler-mapping=true
-spring.cloud.gateway.server.webflux.globalcors.corsConfigurations.[/**].allowedOriginPatterns=*
-spring.cloud.gateway.server.webflux.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
-spring.cloud.gateway.server.webflux.globalcors.corsConfigurations.[/**].allowedHeaders=*
-spring.cloud.gateway.server.webflux.globalcors.corsConfigurations.[/**].allowCredentials=true
+# Disable automatic CORS handler
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=false
 
 # Logging
 logging.level.org.springframework.cloud.gateway=DEBUG
