--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
           def changed = sh(
             script: """
               git fetch origin ${env.BRANCH_NAME}
-              git diff --name-only origin/${env.BRANCH_NAME}...HEAD | grep '^api-gateway/' || true
+              git diff --name-only origin/main...HEAD | grep '^api-gateway/' || true
             """,
             returnStdout: true
           ).trim()
