checking jenkins for booking service image update

--- a/k8s/booking-service/booking-service-deployment.yaml
+++ b/k8s/booking-service/booking-service-deployment.yaml
@@ -15,8 +15,8 @@ spec:
     spec:
       containers:
         - name: booking-service
-          image: booking-service:latest
-          imagePullPolicy: Never
+          image: ketan803/booking-service:main-1
+          imagePullPolicy: Always
           ports:
             - containerPort: 8087
           resources:
