--- a/k8s/user-service/user-service-deployment.yaml
+++ b/k8s/user-service/user-service-deployment.yaml
@@ -15,8 +15,8 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: user-service:latest
-          imagePullPolicy: Never
+          image: ketan803/user-service:main-1
+          imagePullPolicy: Always
           ports:
             - containerPort: 8083
 
