--- a/k8s/redis/redis-deployment.yaml
+++ b/k8s/redis/redis-deployment.yaml
@@ -19,3 +19,10 @@ spec:
           ports:
             - containerPort: 6379
           command: ["redis-server", "--save", "", "--appendonly", "no"]
+          resources:
+            requests:
+              cpu: 50m
+              memory: 128Mi
+            limits:
+              cpu: 200m
+              memory: 256Mi
